fml/fmlParser.py
# Generated from fml.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class fmlParser ( Parser ):

    grammarFileName = "fml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'FM'", "'featuremodel'", "';'", "':'", 
                     "')?'", "'->'", "'&'", "'{'", "'['", "']'", "'('", 
                     "')'", "'|'", "'+'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LCURLY", "LEFT_HOOK", "RIGHT_HOOK", "LEFT_PAREN", 
                      "RIGHT_PAREN", "B_OR", "PLUS", "FT_ID", "WS" ]

    RULE_featuremodel = 0
    RULE_production = 1
    RULE_child = 2
    RULE_mandatory = 3
    RULE_optional = 4
    RULE_xorgroup = 5
    RULE_orgroup = 6
    RULE_mutexgroup = 7
    RULE_constraints = 8

    ruleNames =  [ "featuremodel", "production", "child", "mandatory", "optional", 
                   "xorgroup", "orgroup", "mutexgroup", "constraints" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    LCURLY=8
    LEFT_HOOK=9
    RIGHT_HOOK=10
    LEFT_PAREN=11
    RIGHT_PAREN=12
    B_OR=13
    PLUS=14
    FT_ID=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FeaturemodelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(fmlParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(fmlParser.RIGHT_PAREN, 0)

        def constraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fmlParser.ConstraintsContext)
            else:
                return self.getTypedRuleContext(fmlParser.ConstraintsContext,i)


        def FT_ID(self):
            return self.getToken(fmlParser.FT_ID, 0)

        def production(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fmlParser.ProductionContext)
            else:
                return self.getTypedRuleContext(fmlParser.ProductionContext,i)


        def getRuleIndex(self):
            return fmlParser.RULE_featuremodel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeaturemodel" ):
                listener.enterFeaturemodel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeaturemodel" ):
                listener.exitFeaturemodel(self)




    def featuremodel(self):

        localctx = fmlParser.FeaturemodelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_featuremodel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            _la = self._input.LA(1)
            if not(_la==fmlParser.T__0 or _la==fmlParser.T__1):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 19
            self.match(fmlParser.LEFT_PAREN)
            self.state = 29
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 20
                self.match(fmlParser.FT_ID)
                self.state = 21
                self.match(fmlParser.T__2)
                pass

            elif la_ == 2:
                self.state = 25 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 22
                        self.production()
                        self.state = 23
                        self.match(fmlParser.T__2)

                    else:
                        raise NoViableAltException(self)
                    self.state = 27 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass


            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==fmlParser.LEFT_PAREN or _la==fmlParser.FT_ID:
                self.state = 31
                self.constraints(0)
                self.state = 32
                self.match(fmlParser.T__2)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(fmlParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FT_ID(self):
            return self.getToken(fmlParser.FT_ID, 0)

        def child(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fmlParser.ChildContext)
            else:
                return self.getTypedRuleContext(fmlParser.ChildContext,i)


        def getRuleIndex(self):
            return fmlParser.RULE_production

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProduction" ):
                listener.enterProduction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProduction" ):
                listener.exitProduction(self)




    def production(self):

        localctx = fmlParser.ProductionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_production)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(fmlParser.FT_ID)
            self.state = 42
            self.match(fmlParser.T__3)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 43
                self.child()
                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fmlParser.LEFT_HOOK) | (1 << fmlParser.LEFT_PAREN) | (1 << fmlParser.FT_ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChildContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mandatory(self):
            return self.getTypedRuleContext(fmlParser.MandatoryContext,0)


        def optional(self):
            return self.getTypedRuleContext(fmlParser.OptionalContext,0)


        def xorgroup(self):
            return self.getTypedRuleContext(fmlParser.XorgroupContext,0)


        def orgroup(self):
            return self.getTypedRuleContext(fmlParser.OrgroupContext,0)


        def mutexgroup(self):
            return self.getTypedRuleContext(fmlParser.MutexgroupContext,0)


        def getRuleIndex(self):
            return fmlParser.RULE_child

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChild" ):
                listener.enterChild(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChild" ):
                listener.exitChild(self)




    def child(self):

        localctx = fmlParser.ChildContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_child)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 48
                self.mandatory()
                pass

            elif la_ == 2:
                self.state = 49
                self.optional()
                pass

            elif la_ == 3:
                self.state = 50
                self.xorgroup()
                pass

            elif la_ == 4:
                self.state = 51
                self.orgroup()
                pass

            elif la_ == 5:
                self.state = 52
                self.mutexgroup()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MandatoryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FT_ID(self):
            return self.getToken(fmlParser.FT_ID, 0)

        def getRuleIndex(self):
            return fmlParser.RULE_mandatory

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMandatory" ):
                listener.enterMandatory(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMandatory" ):
                listener.exitMandatory(self)




    def mandatory(self):

        localctx = fmlParser.MandatoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mandatory)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(fmlParser.FT_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_HOOK(self):
            return self.getToken(fmlParser.LEFT_HOOK, 0)

        def FT_ID(self):
            return self.getToken(fmlParser.FT_ID, 0)

        def RIGHT_HOOK(self):
            return self.getToken(fmlParser.RIGHT_HOOK, 0)

        def getRuleIndex(self):
            return fmlParser.RULE_optional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional" ):
                listener.enterOptional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional" ):
                listener.exitOptional(self)




    def optional(self):

        localctx = fmlParser.OptionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(fmlParser.LEFT_HOOK)
            self.state = 58
            self.match(fmlParser.FT_ID)
            self.state = 59
            self.match(fmlParser.RIGHT_HOOK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class XorgroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(fmlParser.LEFT_PAREN, 0)

        def FT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.FT_ID)
            else:
                return self.getToken(fmlParser.FT_ID, i)

        def RIGHT_PAREN(self):
            return self.getToken(fmlParser.RIGHT_PAREN, 0)

        def B_OR(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.B_OR)
            else:
                return self.getToken(fmlParser.B_OR, i)

        def getRuleIndex(self):
            return fmlParser.RULE_xorgroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXorgroup" ):
                listener.enterXorgroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXorgroup" ):
                listener.exitXorgroup(self)




    def xorgroup(self):

        localctx = fmlParser.XorgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_xorgroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(fmlParser.LEFT_PAREN)
            self.state = 62
            self.match(fmlParser.FT_ID)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(fmlParser.B_OR)
                self.state = 64
                self.match(fmlParser.FT_ID)
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==fmlParser.B_OR):
                    break

            self.state = 69
            self.match(fmlParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrgroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(fmlParser.LEFT_PAREN, 0)

        def FT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.FT_ID)
            else:
                return self.getToken(fmlParser.FT_ID, i)

        def RIGHT_PAREN(self):
            return self.getToken(fmlParser.RIGHT_PAREN, 0)

        def PLUS(self):
            return self.getToken(fmlParser.PLUS, 0)

        def B_OR(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.B_OR)
            else:
                return self.getToken(fmlParser.B_OR, i)

        def getRuleIndex(self):
            return fmlParser.RULE_orgroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrgroup" ):
                listener.enterOrgroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrgroup" ):
                listener.exitOrgroup(self)




    def orgroup(self):

        localctx = fmlParser.OrgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_orgroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(fmlParser.LEFT_PAREN)
            self.state = 72
            self.match(fmlParser.FT_ID)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self.match(fmlParser.B_OR)
                self.state = 74
                self.match(fmlParser.FT_ID)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==fmlParser.B_OR):
                    break

            self.state = 79
            self.match(fmlParser.RIGHT_PAREN)
            self.state = 80
            self.match(fmlParser.PLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutexgroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PAREN(self):
            return self.getToken(fmlParser.LEFT_PAREN, 0)

        def FT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.FT_ID)
            else:
                return self.getToken(fmlParser.FT_ID, i)

        def B_OR(self, i:int=None):
            if i is None:
                return self.getTokens(fmlParser.B_OR)
            else:
                return self.getToken(fmlParser.B_OR, i)

        def getRuleIndex(self):
            return fmlParser.RULE_mutexgroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMutexgroup" ):
                listener.enterMutexgroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMutexgroup" ):
                listener.exitMutexgroup(self)




    def mutexgroup(self):

        localctx = fmlParser.MutexgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mutexgroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(fmlParser.LEFT_PAREN)
            self.state = 83
            self.match(fmlParser.FT_ID)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.match(fmlParser.B_OR)
                self.state = 85
                self.match(fmlParser.FT_ID)
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==fmlParser.B_OR):
                    break

            self.state = 90
            self.match(fmlParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FT_ID(self):
            return self.getToken(fmlParser.FT_ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(fmlParser.LEFT_PAREN, 0)

        def constraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fmlParser.ConstraintsContext)
            else:
                return self.getTypedRuleContext(fmlParser.ConstraintsContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(fmlParser.RIGHT_PAREN, 0)

        def getRuleIndex(self):
            return fmlParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)



    def constraints(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = fmlParser.ConstraintsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_constraints, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [fmlParser.FT_ID]:
                self.state = 93
                self.match(fmlParser.FT_ID)
                pass
            elif token in [fmlParser.LEFT_PAREN]:
                self.state = 94
                self.match(fmlParser.LEFT_PAREN)
                self.state = 95
                self.constraints(0)
                self.state = 96
                self.match(fmlParser.RIGHT_PAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = fmlParser.ConstraintsContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_constraints)
                        self.state = 100
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 101
                        self.match(fmlParser.T__5)
                        self.state = 102
                        self.constraints(5)
                        pass

                    elif la_ == 2:
                        localctx = fmlParser.ConstraintsContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_constraints)
                        self.state = 103
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 104
                        self.match(fmlParser.T__6)
                        self.state = 105
                        self.constraints(4)
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.constraints_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def constraints_sempred(self, localctx:ConstraintsContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




